--- a/css/custom.css
+++ b/css/custom.css
@@ -6,41 +6,52 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 /*Small devices (landscape phones, 576px and up)*/
-@media (max-width: 576px) {
+@media (max-width: 575px) {
     .frame-2-title {
-        font-size: 1.2rem;
-        padding-top: 30px;
+        font-size: 1.5rem;
+        padding-top: 10px;
+    }
+}
+
+@media (min-width: 576px) {
+    .frame-2-title {
+        font-size: 1.8rem;
+        padding-top: 10px;
     }
 }
 
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
     .frame-2-title {
-        font-size: 2.2rem;
+        font-size: 2rem;
+        padding-top: 15px;
     }
 }
 
 /*Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
     .frame-2-title {
-        font-size: 3.5rem;
+        font-size: 3rem;
+        padding-top: 20px;
     }
 }
 
 /*X-Large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
     .frame-2-title {
-        font-size: 4.5rem;
+        font-size: 3.5rem;
+        padding-top: 30px;
     }
 }
 
 /*XX-Large devices (larger desktops, 1400px and up)*/
 @media (min-width: 1400px) {
     .frame-2-title {
-        font-size: 5.5rem;
+        font-size: 4rem;
+        padding-top: 40px;
     }
 }
